Beautify GH action output
Add comments to each scripts, as first line is what is being displayed
in Github Action output.

--- a/actions/run-color-scheme-tests/action.yaml
+++ b/actions/run-color-scheme-tests/action.yaml
@@ -8,6 +8,7 @@ runs:
   using: 'composite'
   steps:
     - run: |
+        # Run Color Scheme Tests
         . $GITHUB_ACTION_PATH/../setup/utils.sh
 
         InstallPackage "ColorSchemeUnit" "https://github.com/gerardroche/sublime-color-scheme-unit"
